# ECM_Rework

./: .env.dev  .env.example  .env.prod  .gitignore  .gitlab-ci.yml  BASE.sql  BASEV2.sql  CHANGELOG.md  CI_CD_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile.prod  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DETAILED_DEPLOYMENT.md  DOCKER_COMPOSE_NOTE.md  DOCKER_IMAGES.md  DUPLICATE_FEATURE.md  FEATURES.md  FILE-UPLOAD-DIAGNOSTIC.md  FILE_MANAGEMENT_REWORK_PROPOSAL.md  FIX-SUBCATEGORY-FK.md  GITFLOW.md  GITHUB_SETUP.md  GUIDE_RESOLUTION_COURBES.md  HOTFIX-LOGS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  Makefile  PATCH_NOTES_1.2.15.md  PATCH_NOTES_1.2.3_to_1.2.11.md  PATCH_NOTES_1.3.2.md  PHASE_2_TASK_2.1_SUMMARY.md  PHOTO_METADATA_IMPROVEMENTS.md  POST-DEPLOYMENT-CHECKS.md  README.md  RECIPE_PREDICTION_INTEGRATION.md  Rapport test.sql  SEQUELIZE-FK-ISSUE.md  (+29 more)
.claude/: settings.local.json
.github/: WORKFLOWS.md
api/: DOCUMENTATION.md  Dockerfile  README.md  requirements.txt  test-api.py
client/: .dockerignore  Dockerfile  jsconfig.json  package-lock.json  package.json  postcss.config.js  webpack.config.js
docs/: FIX-FILES-NOT-VISIBLE-IN-SECTIONS.md
electron/: build.js  config.js  create-shortcut.bat  electron-builder.json  index.html  install-mysql-full.bat  install-mysql.bat  main.js  mysql-config.iss  mysql-config.js  mysql-installer-package.json  mysql-installer.iss  mysql-installer.js  mysql_install_log.txt  mysql_installer_log.txt  package-for-mysql-config.json  package.json  preload.js  renderer.js  vite.config.js
scripts/: README.md  (+13 more)
(+854 files in other folders)
