[tool.poetry]
name = "ecm-rework"
version = "0.1.0"
description = "Reworking ECM project using Flask"
authors = ["Mekkilangelo <mekki.abdessatar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.3"
python-dotenv = "^1.0.1"
flask-bootstrap4 = "^4.0.2"
flask-wtf = "^1.2.2"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
